Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ stages:
     jobs:
       - job: 'build'
         steps:
-          - script: 'dotnet build'
+          - script: "dotnet build 'pipelineMvcDemo/pipelineMvcDemo.csproj'"
           - script: echo "Hey there $(instructor)!"
 
       - job: 'test'
