--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ stages:
     jobs:
       - job: 'build'
         steps:
-          - script: "dotnet build 'pipelineMvcDemo/pipelineMvcDemo.csproj'"
+          - script: dotnet build '/Desktop/RevRepo/michaelHall-pipelineDemo/pipelineMvcDemo/pipelineMvcDemo.csproj'
           - script: echo "Hey there $(instructor)!"
 
       - job: 'test'
