--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ stages:
     jobs:
       - job: 'build'
         steps: #/Desktop/RevRepo/michaelHall-pipelineDemo/pipelineMvcDemo
-          - script: dotnet build '/Desktop/RevRepo/michaelHall-pipelineDemo/pipelineMvcDemo/pipelineMvcDemo.csproj'
+          - script: dotnet build '/Desktop/RevRepo/michaelHall-pipelineDemo/pipelineMvcDemo'
           - script: echo "Hey there $(instructor)!"
 
       - job: 'test'
